# MetronomeAmplifiedAndroid

./: .gitignore  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/grimace/metronomeamplified/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: alpha_texture.frag  font_shader.frag  font_transform_shader.vert  slime_transition.frag  slime_transition.vert
app/src/main/cpp/: audiostreamer.cpp  audiostreamer.h  byteswap.cpp  byteswap.h  enums.cpp  enums.h  filebuffers.cpp  filebuffers.h  main.cpp  note.cpp  note.h  section.cpp  section.h  song.cpp  song.h  songplayer.cpp  songplayer.h  wavereader.cpp  wavereader.h
app/src/main/java/com/grimace/metronomeamplified/: MainActivity.kt
app/src/main/java/com/grimace/metronomeamplified/caches/: FramebufferCache.kt  ShaderCache.kt  TextureCache.kt  VertexBufferCache.kt
app/src/main/java/com/grimace/metronomeamplified/components/: AudioSynchroniser.kt  GlFramebuffer.kt  GlShader.kt  GlTexture.kt  GlVertexBuffer.kt
app/src/main/java/com/grimace/metronomeamplified/enums/: NoteType.kt  Tuplet.kt
app/src/main/java/com/grimace/metronomeamplified/extensions/: AssetManagerExtensions.kt  ContentExtensions.kt  StreamExtensions.kt
app/src/main/java/com/grimace/metronomeamplified/renderer/: MainRenderer.kt
app/src/main/java/com/grimace/metronomeamplified/scenes/: HelpHubScene.kt  HelpNavigatingScene.kt  MainScene.kt  SettingsHubScene.kt  (+2 more)
app/src/main/res/values/: strings.xml
app/src/test/java/com/grimace/metronomeamplified/: ExampleUnitTest.kt
(+42 files in other folders)
